--- a/index.html
+++ b/index.html
@@ -3,10 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Profile Share Model</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="circle1"></div>
+    <div class="circle2"></div>
+
+    <!-- wrapper -->
+    <div class="wrapper">
+        <div class="card-wrapper">
+            <div>
+                <img src="" alt="user">
+            </div>
+
+            <div class="user-name">
+                <h2>Shubh Gupta</h2>
+
+            </div>
+
+            <div class="designation">
+                <h3>Student,VIT Bhopal</h3>
+            </div>
+            <div class="button-grp">
+                <button>
+                    <i class="fa-solid fa-share"></i>
+                    <div>Share my profile</div>
+                </button>
+
+                <button class="btn-follow btn-card">
+                    Follow me
+                    <a href=""></a>
+                </button>
+            </div>
+        </div>
+    </div>
+    
+
+
+
+
+
+
     <script src="script.js"></script>
 </body>
 </html>
