--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                     <a href="#" class="icon" id="facebook">
                         <i class="fa-brands fa-facebook-f"></i>
                     </a>
-                    <a href="#" class="icon" id="twitter">
+                    <a href="" class="icon" id="twitter">
                         <i class="fa-brands fa-twitter"></i>
                     </a>
-                    <a href="#" class="icon" id="instagram">
+                    <a href="https://www.instagram.com/shubh_16.1/" class="icon" id="instagram">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
                     <a href="#" class="icon" id="whatsapp">
